--- a/apoie.html
+++ b/apoie.html
@@ -55,7 +55,6 @@
         </div>
     </header>
     <main class="container mx-auto p-4 md:p-8">
-
         <section id="como-apoiar" class="mb-16">
             <div class="max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
                 <div class="text-center mb-12 bg-green-50 rounded-lg p-8 border-l-8 border-sind-green">
@@ -63,7 +62,6 @@
                     <p id="total-arrecadado" class="text-6xl font-extrabold text-sind-green tracking-tight">R$ 0,00</p>
                     <p class="text-gray-500 mt-2 text-lg">Meta: R$ 10.000,00</p>
                 </div>
-
                 <div class="grid md:grid-cols-2 gap-8 items-center">
                     <div class="text-center md:text-left">
                         <h3 class="text-2xl font-bold text-gray-800 mb-4">Doe via PIX</h3>
@@ -72,9 +70,7 @@
                             <p class="text-gray-500">Chave PIX (CNPJ):</p>
                             <p id="pix-key" class="text-xl font-mono text-gray-800 break-words">XX.XXX.XXX/0001-XX</p>
                         </div>
-                        <button onclick="copyPix()" class="mt-4 bg-sind-green text-white font-bold py-3 px-6 rounded-lg hover:bg-green-700 transition w-full md:w-auto">
-                            Copiar Chave PIX
-                        </button>
+                        <button onclick="copyPix()" class="mt-4 bg-sind-green text-white font-bold py-3 px-6 rounded-lg hover:bg-green-700 transition w-full md:w-auto">Copiar Chave PIX</button>
                     </div>
                     <div class="text-center">
                         <img src="https://placehold.co/300x300/f8f9fa/343a40?text=QR+Code+PIX" alt="QR Code para doação via PIX" class="mx-auto rounded-lg shadow-md">
@@ -83,20 +79,15 @@
                 </div>
             </div>
         </section>
-
         <section id="prestacao-contas">
              <h2 class="text-3xl font-bold text-center text-gray-800 mb-2">Prestação de Contas</h2>
             <p class="text-center text-gray-600 mb-10 max-w-3xl mx-auto">A transparência é um dos nossos pilares. Aqui você pode acompanhar como os recursos arrecadados estão sendo utilizados na campanha.</p>
-
             <div class="bg-white p-4 md:p-8 rounded-2xl shadow-lg">
-                <div class="chart-container">
-                    <canvas id="expensesChart"></canvas>
-                </div>
+                <div class="chart-container"><canvas id="expensesChart"></canvas></div>
             </div>
         </section>
-
     </main>
-    <footer class="bg-dark-gray text-white mt-16">
+    <footer class="bg-dark-gray text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <h3 class="text-2xl font-bold text-sind-green">Junte-se à Mudança</h3>
             <p class="mt-4 max-w-2xl mx-auto">Siga-nos nas redes sociais, participe dos debates e ajude a construir o sindicato que a nossa categoria merece.</p>
@@ -108,83 +99,40 @@
             <p class="mt-8 text-sm text-gray-400">© 2025 Chapa "Voz da Base". Todos os direitos reservados.</p>
         </div>
     </footer>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
             mobileMenuButton.addEventListener('click', () => { mobileMenu.classList.toggle('hidden'); });
-            
             const totalArrecadadoEl = document.getElementById('total-arrecadado');
             const valorArrecadado = 4350.75; 
             totalArrecadadoEl.textContent = valorArrecadado.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-
             const ctx = document.getElementById('expensesChart').getContext('2d');
             new Chart(ctx, {
                 type: 'bar',
                 data: {
-                    labels: [
-                        'Material Gráfico', 
-                        'Redes Sociais', 
-                        'Faixas', 
-                        'Equipamentos', 
-                        'Deslocamento'
-                    ],
+                    labels: ['Material Gráfico', 'Redes Sociais', 'Faixas', 'Equipamentos', 'Deslocamento'],
                     datasets: [{
                         label: 'Gastos da Campanha (R$)',
                         data: [1200, 850, 450, 300, 600],
-                        backgroundColor: [
-                            'rgba(0, 150, 63, 0.7)',
-                            'rgba(52, 58, 64, 0.7)',
-                            'rgba(218, 26, 47, 0.7)',
-                            'rgba(108, 117, 125, 0.7)',
-                            'rgba(173, 181, 189, 0.7)'
-                        ],
-                        borderColor: [
-                            '#00963f',
-                            '#343a40',
-                            '#da1a2f',
-                            '#6c757d',
-                            '#adb5bd'
-                        ],
+                        backgroundColor: ['rgba(0, 150, 63, 0.7)', 'rgba(52, 58, 64, 0.7)', 'rgba(218, 26, 47, 0.7)', 'rgba(108, 117, 125, 0.7)', 'rgba(173, 181, 189, 0.7)'],
+                        borderColor: ['#00963f', '#343a40', '#da1a2f', '#6c757d', '#adb5bd'],
                         borderWidth: 1
                     }]
                 },
                 options: {
-                    indexAxis: 'y',
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    scales: {
-                        x: {
-                            beginAtZero: true,
-                            title: {
-                                display: true,
-                                text: 'Valor Gasto (R$)'
-                            }
-                        }
-                    },
+                    indexAxis: 'y', responsive: true, maintainAspectRatio: false,
+                    scales: { x: { beginAtZero: true, title: { display: true, text: 'Valor Gasto (R$)' } } },
                     plugins: {
-                        legend: {
-                            display: false
-                        },
-                        title: {
-                            display: true,
-                            text: 'Distribuição dos Gastos da Campanha',
-                            font: { size: 18, color: '#212529' }
-                        }
+                        legend: { display: false },
+                        title: { display: true, text: 'Distribuição dos Gastos da Campanha', font: { size: 18, color: '#212529' } }
                     }
                 }
             });
         });
-
         function copyPix() {
             const pixKey = document.getElementById('pix-key').innerText;
-            navigator.clipboard.writeText(pixKey).then(() => {
-                alert("Chave PIX copiada para a área de transferência!");
-            }, (err) => {
-                alert("Erro ao copiar a chave PIX.");
-                console.error('Erro ao copiar: ', err);
-            });
+            navigator.clipboard.writeText(pixKey).then(() => { alert("Chave PIX copiada para a área de transferência!"); }, (err) => { alert("Erro ao copiar a chave PIX."); console.error('Erro ao copiar: ', err); });
         }
     </script>
 </body>
