--- a/quem-somos.html
+++ b/quem-somos.html
@@ -61,11 +61,53 @@
                     <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
                 </div>
-                 <!-- Fim do Exemplo -->
+                <!-- Fim do Exemplo de Membro -->
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 2</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 3</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 4</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 5</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 6</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 7</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 8</h3>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                </div>
             </div>
         </section>
     </main>
-    <footer class="bg-dark-gray text-white mt-16">
+    <footer class="bg-dark-gray text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <h3 class="text-2xl font-bold text-sind-green">Junte-se à Mudança</h3>
             <p class="mt-4 max-w-2xl mx-auto">Siga-nos nas redes sociais, participe dos debates e ajude a construir o sindicato que a nossa categoria merece.</p>
@@ -88,4 +130,3 @@
     </script>
 </body>
 </html>
-```
